change chaos biome source and may avoid conflict