@@ -3,14 +3,18 @@ package qouteall.imm_ptl.peripheral.alternate_dimension;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.util.dynamic.RegistryLookupCodec;
+import net.minecraft.util.registry.BuiltinRegistries;
 import net.minecraft.util.registry.Registry;
+import net.minecraft.util.registry.RegistryKey;
 import net.minecraft.world.biome.Biome;
 import net.minecraft.world.biome.source.BiomeSource;
+import net.minecraft.world.biome.source.MultiNoiseBiomeSource;
 import net.minecraft.world.biome.source.SeedMixer;
 import net.minecraft.world.biome.source.util.MultiNoiseUtil;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 public class ChaosBiomeSource extends BiomeSource {
@@ -23,20 +27,31 @@ public class ChaosBiomeSource extends BiomeSource {
     private Registry<Biome> biomeRegistry;
     private List<Biome> biomes;
     
-    public static List<Biome> getVanillaBiomes(Registry<Biome> biomeRegistry) {
-        return biomeRegistry.getIds().stream().filter(
-            id -> id.getNamespace().equals("minecraft")
-        ).map(id -> biomeRegistry.get(id)).toList();
+    private static List<RegistryKey<Biome>> getOverworldBiomeIds() {
+        Set<Biome> set = MultiNoiseBiomeSource.Preset.OVERWORLD.getBiomeSource(BuiltinRegistries.BIOME).getBiomes();
+        return set.stream().map(BuiltinRegistries.BIOME::getKey).flatMap(Optional::stream).collect(Collectors.toList());
+    }
+    
+    public static List<Biome> getInvolvedBiomes(Registry<Biome> biomeRegistry) {
+        
+        return getOverworldBiomeIds().stream().flatMap(
+            biomeRegistryKey -> biomeRegistry.getOrEmpty(biomeRegistryKey).stream()
+        ).collect(Collectors.toList());
+
+
+//        return biomeRegistry.getIds().stream().filter(
+//            id -> id.getNamespace().equals("minecraft")
+//        ).map(id -> biomeRegistry.get(id)).toList();
     }
     
     public ChaosBiomeSource(long seed, Registry<Biome> biomeRegistry) {
-        super(getVanillaBiomes(biomeRegistry));
+        super(getInvolvedBiomes(biomeRegistry));
         
         worldSeed = seed;
         this.biomeRegistry = biomeRegistry;
         
         // java does not allow doing things before constructor, so invoke this again
-        biomes = getVanillaBiomes(biomeRegistry);
+        biomes = getInvolvedBiomes(biomeRegistry);
     }
     
     private Biome getRandomBiome(int x, int z) {
